cmake_minimum_required(VERSION 3.2)
project(LagSwitch CXX)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ../Bin)

add_executable (${PROJECT_NAME}
    src/main.cpp
)

set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD 11)
set_property(TARGET ${PROJECT_NAME} PROPERTY CXX_STANDARD_REQUIRED ON)
set_property(TARGET ${PROJECT_NAME} PROPERTY CMAKE_CXX_EXTENSIONS OFF)

SET_TARGET_PROPERTIES(${PROJECT_NAME} PROPERTIES LINK_FLAGS    "/MANIFESTUAC:\"level='requireAdministrator' uiAccess='false'\" /SUBSYSTEM:CONSOLE")

TARGET_LINK_LIBRARIES(${PROJECT_NAME} ole32 oleaut32)
